--- a/sonar_config.json
+++ b/sonar_config.json
@@ -1,4 +1,4 @@
 {
-  "bot_token": "8089255042:AAHHqh1zJFHbj6_c5QUTPv_6thKHgNCg2NI",
-  "admin_id": "585214295"
+  "bot_token": "YourTokenBot",
+  "admin_id": "123456789"
 }
